使用 Colaboratory 建立

--- a/Golden_chung.ipynb
+++ b/Golden_chung.ipynb
@@ -6,7 +6,7 @@
       "name": "Golden_chung.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMeEyrcTrnhd/wKp/bw8A2L",
+      "authorship_tag": "ABX9TyPuossCs90lrofIWVgCo4aZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1126,56 +1126,208 @@
         "\n",
         "base_kernel = np.array(['000'])\n",
         "generate_txt(\"BaseKernel9.hex\", base_kernel, 'w+')\n",
+        "hex_map = ['0', '1', '2', '3', '4', '5', '6', '7', '8', '9', 'A', 'B', 'C', 'D', 'E', 'F']\n",
         "\n",
         "with open('./kernel_hex.txt', 'r') as kernel_file:\n",
-        "  for data in kernel_file:\n",
-        "    print(data, end=\"\")\n"
+        "  for k in kernel_file:\n",
+        "    # print(k, end=\"\")\n",
+        "    data = '000' + k\n",
+        "    print(data)\n",
+        "    pow = 3\n",
+        "    temp = 0\n",
+        "    ans_arr = ''\n",
+        "    for index in range(len(data)):\n",
+        "      if((index+1)%4 == 0):\n",
+        "        temp += (int(data[index])) * (2**pow)\n",
+        "        print(temp)\n",
+        "        ans_arr += hex_map[temp]\n",
+        "        pow = 3\n",
+        "        temp = 0\n",
+        "\n",
+        "      else:\n",
+        "        if(data[index] != '\\n'):\n",
+        "          temp += (int(data[index])) * (2**pow)\n",
+        "          pow -= 1\n",
+        "\n",
+        "    output_content = np.array([ans_arr])\n",
+        "    generate_txt(\"FilterKernel9.hex\", output_content, 'a')\n",
+        "\n",
+        "  \n",
+        "      \n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "GJi5hJG2vXWM",
-        "outputId": "5306e759-e1a1-4b33-ec6d-9b44139aab59"
+        "outputId": "e0302e6f-caac-4ad0-b7c5-e9c7fee77865"
       },
-      "execution_count": 74,
+      "execution_count": 103,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "111101000\n",
-            "111001001\n",
-            "001111110\n",
-            "000101010\n",
-            "011111010\n",
-            "111000101\n",
-            "001101001\n",
-            "000101100\n",
-            "011101100\n",
-            "110010100\n",
-            "001110000\n",
-            "000110010\n",
-            "110010000\n",
-            "101001011\n",
-            "111000000\n",
-            "000100101\n",
-            "010010001\n",
-            "001110010\n",
-            "101101011\n",
-            "001111100\n",
-            "101100110\n",
-            "000111100\n",
-            "000011100\n",
-            "001111110\n",
-            "010000001\n",
-            "100000111\n",
-            "000110001\n",
-            "010010110\n",
-            "101100010\n",
-            "011100011\n",
-            "101101000\n",
-            "010100101\n"
+            "000111101000\n",
+            "\n",
+            "1\n",
+            "14\n",
+            "8\n",
+            "000111001001\n",
+            "\n",
+            "1\n",
+            "12\n",
+            "9\n",
+            "000001111110\n",
+            "\n",
+            "0\n",
+            "7\n",
+            "14\n",
+            "000000101010\n",
+            "\n",
+            "0\n",
+            "2\n",
+            "10\n",
+            "000011111010\n",
+            "\n",
+            "0\n",
+            "15\n",
+            "10\n",
+            "000111000101\n",
+            "\n",
+            "1\n",
+            "12\n",
+            "5\n",
+            "000001101001\n",
+            "\n",
+            "0\n",
+            "6\n",
+            "9\n",
+            "000000101100\n",
+            "\n",
+            "0\n",
+            "2\n",
+            "12\n",
+            "000011101100\n",
+            "\n",
+            "0\n",
+            "14\n",
+            "12\n",
+            "000110010100\n",
+            "\n",
+            "1\n",
+            "9\n",
+            "4\n",
+            "000001110000\n",
+            "\n",
+            "0\n",
+            "7\n",
+            "0\n",
+            "000000110010\n",
+            "\n",
+            "0\n",
+            "3\n",
+            "2\n",
+            "000110010000\n",
+            "\n",
+            "1\n",
+            "9\n",
+            "0\n",
+            "000101001011\n",
+            "\n",
+            "1\n",
+            "4\n",
+            "11\n",
+            "000111000000\n",
+            "\n",
+            "1\n",
+            "12\n",
+            "0\n",
+            "000000100101\n",
+            "\n",
+            "0\n",
+            "2\n",
+            "5\n",
+            "000010010001\n",
+            "\n",
+            "0\n",
+            "9\n",
+            "1\n",
+            "000001110010\n",
+            "\n",
+            "0\n",
+            "7\n",
+            "2\n",
+            "000101101011\n",
+            "\n",
+            "1\n",
+            "6\n",
+            "11\n",
+            "000001111100\n",
+            "\n",
+            "0\n",
+            "7\n",
+            "12\n",
+            "000101100110\n",
+            "\n",
+            "1\n",
+            "6\n",
+            "6\n",
+            "000000111100\n",
+            "\n",
+            "0\n",
+            "3\n",
+            "12\n",
+            "000000011100\n",
+            "\n",
+            "0\n",
+            "1\n",
+            "12\n",
+            "000001111110\n",
+            "\n",
+            "0\n",
+            "7\n",
+            "14\n",
+            "000010000001\n",
+            "\n",
+            "0\n",
+            "8\n",
+            "1\n",
+            "000100000111\n",
+            "\n",
+            "1\n",
+            "0\n",
+            "7\n",
+            "000000110001\n",
+            "\n",
+            "0\n",
+            "3\n",
+            "1\n",
+            "000010010110\n",
+            "\n",
+            "0\n",
+            "9\n",
+            "6\n",
+            "000101100010\n",
+            "\n",
+            "1\n",
+            "6\n",
+            "2\n",
+            "000011100011\n",
+            "\n",
+            "0\n",
+            "14\n",
+            "3\n",
+            "000101101000\n",
+            "\n",
+            "1\n",
+            "6\n",
+            "8\n",
+            "000010100101\n",
+            "\n",
+            "0\n",
+            "10\n",
+            "5\n"
           ]
         }
       ]
